;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.4.12:
  * minor incompatible change: PRINT-TYPE and PRINT-TYPE-SPECIFIER are not
    exported from SB-EXT. These were never announced, so this change would
    only affects users who discovered these undocumented functions.

changes in sbcl-1.4.12 relative to sbcl-1.4.11:
  * minor incompatible change: a number of platform-specific elements of
    *FEATURES* related to whether the system implements particular strategies
    have been removed.
  * minor incompatible change: some changes to the (internal) implementation
    details of the x86 and x86-64 have necessitated changes to some low-level
    libraries. 
  * enhancement: attempting to transfer control through GO or RETURN-FROM to 
    frames which no longer exist are now caught and handled by the debugger.
  * enhancement: identical code (at the machine instruction level) can now be
    shared between functions, if explicitly requested.
  * enhancement: SB-EXT:STRING-TO-OCTETS and SB-EXT:OCTETS-TO-STRING are now
    documented.
  * bug fixes: fix a number of bugs revealed by random testing (lp#1793171,
    lp#1793150, lp#1791550, lp#1792030, lp#1791059, lp#1790157, lp#1790717,
    lp#1790703)

changes in sbcl-1.4.11 relative to sbcl-1.4.10:
  * minor incompatible change: changes to the (internal) assembler on x86
    and x86-64 may cause problems to some low-level third-party libraries:
    ** new macro EA for defining an effective address, without size
       information;
    ** an explicit size modifier is now needed for MOVSX and MOVSZ
       instructions;
    ** MOVD and MOVQ move a single size of operand by definition.
  * enhancement: support the latest MinGW (lp#1786731, reported by il71)
  * enhancement: checks for modifications of constants can now be done in
    local (FLET/LABELS) functions.
  * optimization: improved type checking routines for various compound types.